--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <th scope="col">Handle</th>
           </tr>
         </thead>
+
         <tbody>
           <tr>
             <th scope="row">1</th>
@@ -75,6 +76,39 @@
           </tr>
         </tbody>
       </table>
+
+      <div class="container">
+        <table class="table mt-5 bg-custom2">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
+      </div>
 
       <section class="teble-section mt-5 bg-custom3">
         <div class="container">
@@ -102,6 +136,44 @@
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
       </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="card">
+            <div class="card-body">
+              <table class="table mt-5 bg-custom2">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="mt-5">
@@ -153,6 +225,7 @@
               <div class="card">
                 <div class="card-body">
                   <h1>service1</h1>
+                  <img src="img/images (5).jpeg" alt="">
                 </div>
               </div>
             </div>
@@ -161,9 +234,29 @@
               <div class="card">
                 <div class="card-body">
                   <h1>service2</h1>
+                  <img src="img/images (1).jpeg" alt="">
                 </div>
               </div>
             </div>
+
+            <div class="col-3">
+              <div class="card">
+                <div class="card-body">
+                  <h1>service2</h1>
+                  <img src="img/images (2).jpeg" alt="">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-3">
+              <div class="card">
+                <div class="card-body">
+                  <h1>service2</h1>
+                  <img src="img/images (5).jpeg" alt="">
+                </div>
+              </div>
+            </div>
+
             </div>
             
           </div>
